--- a/css/mobile.css
+++ b/css/mobile.css
@@ -15,13 +15,13 @@ img {
 
 /* Header */
 header {
-  height: 50%;
+  height: 300px;
   border: 2px solid #7d97ad;
   padding: 0 15px;
 }
 
 header h1 {
-  font-size: 3em;
+  font-size: 42px;
   font-family: 'Over the Rainbow', cursive;
   color: #02b3e4;
   order: 1;
@@ -32,12 +32,12 @@ header .site-name {
 }
 
 header h2 {
-  font-size: 1.8em;
+  font-size: 32px;
   text-transform: uppercase;
 }
 
 header h3 {
-  font-size: 1.2em;
+  font-size: 22px;
 }
 
 /* Header-Image */
@@ -47,20 +47,20 @@ header h3 {
 
 /* Featured Work */
 #featured h2 {
-  font-size: 2em;
+  font-size: 32px;
   color: #7d97ad;
 }
 
 #featured h3 {
-  font-size: 1.5em;
+  font-size: 22px;
 }
 
 #featured p {
-  font-size: 1.3em;
+  font-size: 20px;
   padding-bottom: 15px;
 }
 
 /* Footer */
 footer p {
-  font-size: 1em;
+  font-size: 16px;
 }
