--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,9 +24,8 @@ img {
 }
 
 .third-width {
-  width: 30%;
+  width: 40%;
   float: left;
-  padding-left: 20px;
 }
 
 /* Header */
@@ -35,46 +34,50 @@ header {
   height: 150px;
 }
 
-header .full-width {
-  padding: 15px;
+header .half-width {
+  padding-left: 15px;
 }
 
 header h1 {
   font-family: 'Over the Rainbow', cursive;
-  font-size: 2em;
+  font-size: 42px;
   color: #02b3e4;
 }
 
 header h2 {
-  font-size: 1.5em;
+  font-size: 32px;
   text-transform: uppercase;
 }
 
 header h3 {
-  font-size: 1.3em;
+  font-size: 22px;
 }
 
-/* Header-Image */
+/* Header Image */
 #header-image {
-  padding: 15px 0;
+  padding: 25px 0;
 }
 
-/* Featured */
+/* Featured Work */
 #featured {
-  height: 350px;
+  height: 330px;
 }
 
 #featured h2 {
-  font-size: 1.8em;
+  font-size: 32px;
   color: #7d97ad;
 }
 
 #featured h3 {
-  font-size: 1.3em;
+  font-size: 22px;
 }
 
 #featured p {
-  font-size: 1em;
+  font-size: 16px;
+}
+
+#featured img {
+  width: 200px;
 }
 
 #featured .clock {
@@ -87,4 +90,9 @@ header h3 {
 
 #featured .magic-ball {
   order: 3;
+}
+
+/* Footer */
+footer p {
+  font-size: 16px;
 }
