--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,68 @@ img {
 /* Header */
 header {
   border: 2px solid #7d97ad;
+  height: 200px;
+}
+
+header .full-width {
+  padding: 15px;
+}
+
+header h1 {
+  font-size: 3em;
+  font-family: 'Over the Rainbow', cursive;
+  color:#02b3e4;
+}
+
+header h2 {
+  font-size: 2em;
+  text-transform: uppercase;
+}
+
+header h3 {
+  font-size: 1.5em;
+}
+
+/* Header-Image */
+#header-image {
+  padding: 15px 0;
+}
+
+/* Featured Work */
+#featured {
+  height: 350px;
+}
+
+#featured .third-width {
+  padding-left: 25px;
+}
+
+#featured h2 {
+  font-size: 2em;
+  color: #7d97ad;
+}
+
+#featured h3 {
+  font-size: 1.4em;
+}
+
+#featured p {
+  font-size: 1.3em;
+}
+
+#featured .clock {
+  order: 1;
+}
+
+#featured .tribute-page {
+  order: 2;
+}
+
+#featured .magic-ball {
+  order: 3;
+}
+
+/* Footer */
+footer p {
+  font-size: 1em;
 }
