--- a/css/mobile.css
+++ b/css/mobile.css
@@ -20,23 +20,27 @@ header {
   padding: 0 15px;
 }
 
-header h1 {
+header
+h1 {
   font-size: 42px;
   font-family: 'Over the Rainbow', cursive;
   color: #02b3e4;
   order: 1;
 }
 
-header .site-name {
+header
+.site-name {
   order: 2;
 }
 
-header h2 {
+header
+h2 {
   font-size: 32px;
   text-transform: uppercase;
 }
 
-header h3 {
+header
+h3 {
   font-size: 22px;
 }
 
@@ -46,21 +50,25 @@ header h3 {
 }
 
 /* Featured Work */
-#featured h2 {
+#featured
+h2 {
   font-size: 32px;
   color: #7d97ad;
 }
 
-#featured h3 {
+#featured
+h3 {
   font-size: 22px;
 }
 
-#featured p {
+#featured
+p {
   font-size: 20px;
   padding-bottom: 15px;
 }
 
 /* Footer */
-footer p {
+footer
+p {
   font-size: 16px;
 }
