--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,22 +34,26 @@ header {
   height: 150px;
 }
 
-header .half-width {
+header
+.half-width {
   padding-left: 15px;
 }
 
-header h1 {
+header
+h1 {
   font-family: 'Over the Rainbow', cursive;
   font-size: 42px;
   color: #02b3e4;
 }
 
-header h2 {
+header
+h2 {
   font-size: 32px;
   text-transform: uppercase;
 }
 
-header h3 {
+header
+h3 {
   font-size: 22px;
 }
 
@@ -63,36 +67,44 @@ header h3 {
   height: 330px;
 }
 
-#featured h2 {
+#featured
+h2 {
   font-size: 32px;
   color: #7d97ad;
 }
 
-#featured h3 {
+#featured
+h3 {
   font-size: 22px;
 }
 
-#featured p {
+#featured
+p {
   font-size: 16px;
 }
 
-#featured img {
+#featured
+img {
   width: 200px;
 }
 
-#featured .clock {
+#featured
+.clock {
   order: 1;
 }
 
-#featured .tribute-page {
+#featured
+.tribute-page {
   order: 2;
 }
 
-#featured .magic-ball {
+#featured
+.magic-ball {
   order: 3;
 }
 
 /* Footer */
-footer p {
+footer
+p {
   font-size: 16px;
 }
