--- a/css/style.css
+++ b/css/style.css
@@ -34,22 +34,26 @@ header {
   height: 230px;
 }
 
-header .half-width {
+header
+.half-width {
   padding-left: 15px;
 }
 
-header h1 {
+header
+h1 {
   font-family: 'Over the Rainbow', cursive;
   font-size: 52px;
   color: #02b3e4;
 }
 
-header h2 {
+header
+h2 {
   font-size: 42px;
   text-transform: uppercase;
 }
 
-header h3 {
+header
+h3 {
   font-size: 32px;
 }
 
@@ -63,40 +67,49 @@ header h3 {
   height: 400px;
 }
 
-#featured .full-width {
+#featured
+.full-width {
   padding: 20px 0;
 }
 
-#featured .third-width {
+#featured
+.third-width {
   padding-left: 15px;
 }
 
-#featured h2 {
+#featured
+h2 {
   font-size: 42px;
   color: #7d97ad;
 }
 
-#featured h3 {
+#featured
+h3 {
   font-size: 32px;
 }
 
-#featured p {
+#featured
+p {
   font-size: 20px;
 }
 
-#featured img {
+#featured
+img {
   width: 330px;
 }
 
-#featured .clock {
+#featured
+.clock {
   order: 1;
 }
 
-#featured .tribute-page {
+#featured
+.tribute-page {
   order: 2;
 }
 
-#featured .magic-ball {
+#featured
+.magic-ball {
   order: 3;
 }
 
@@ -105,10 +118,12 @@ footer {
   height: 100px;
 }
 
-footer .full-width {
+footer
+.full-width {
   padding: 50px 0;
 }
 
-footer p {
+footer
+p {
   font-size: 16px;
 }
